metrique-aggregation/tests/ui/fail/aggregate_with_dimensions.stderr
error[E0271]: type mismatch resolving `<WithDims as AggregateStrategy>::Key == NoKey`
  --> tests/ui/fail/aggregate_with_dimensions.rs:17:9
   |
17 |     agg.insert(WithDims {
   |         ^^^^^^ type mismatch resolving `<WithDims as AggregateStrategy>::Key == NoKey`
   |
note: expected this to be `NoKey`
  --> tests/ui/fail/aggregate_with_dimensions.rs:10:8
   |
10 | struct WithDims {
   |        ^^^^^^^^
note: required by a bound in `Aggregate::<T>::insert`
  --> src/aggregator.rs
   |
   |     pub fn insert(&mut self, entry: T)
   |            ------ required by a bound in this associated function
...
   |         T: AggregateStrategy<Key = AggregateMustBeUsedOnStructsWithNoKeys>,
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Aggregate::<T>::insert`
